--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "yet-another-react-lightbox": "^3.23.0"
   },
   "devDependencies": {
