--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev-turbo": "next dev --turbopack",
     "dev": "next dev",
     "build": "next build",
+    "export": "next build && next export",
     "start": "next start",
     "lint": "next lint"
   },
